removing tests that will never be fixed
git-svn-id: https://anonsvn.jboss.org/repos/jbossws/stack/native/trunk@16095 50344849-fb0f-0410-a53f-a94597aac05c